--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -2,11 +2,11 @@ applications:
 - name: tracker-backlog
   path: ./applications/backlog-server/build/libs/backlog-server.jar
   routes:
-  - route: backlog-pal-srini-anath.cfapps.io
+  - route: backlog-pal-srini-chinna.cfapps.io
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://backlog-pal-srini-anath.cfapps.io
+    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-srini-chinna.cfapps.io
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-backlog-database
