--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -8,4 +8,5 @@ applications:
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
+    - tracker-service-registry
   - tracker-registration-database
