--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -6,7 +6,8 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-srini-chinna.cfapps.io
+    #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-srini-chinna.cfapps.io
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
+    - tracker-service-registry
   - tracker-timesheets-database
