--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -8,6 +8,8 @@ applications:
   env:
     #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-srini-chinna.cfapps.io
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
+    GRANT_TYPE: client_credentials
   services:
    - tracker-service-registry
    - tracker-backlog-database
+   - tracker-sso
