--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -9,7 +9,9 @@ applications:
     #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-srini-chinna.cfapps.io
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
     GRANT_TYPE: client_credentials
+    MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: *
   services:
    - tracker-service-registry
    - tracker-timesheets-database
    - tracker-sso
+   - tracker-config-server
